styles/index.css
/* ... */
.features ul li[data-info] {
  white-space: wrap;
}

/* box balao */
.features li::after {
  content: attr(data-info);
  position: absolute;
  left: 50%;
  top: -10px;
  transform: translate(-50%, -100%);
  width: 250px;
  background: var(--quaternary-color);
  padding: 12px 8px;
  border-radius: 8px;
  font-size: .9rem;
  font-weight: 500;
  opacity: 0;
  pointer-events: none;
  transition: 0.25s ease;
  z-index: 20;
  line-height: 1.4;
  border: 2px solid #fff;
  box-shadow: 0 5px 15px rgba(0,0,0,0.25);
}

/* seta balao */
.features li::before {
  content: "";
  position: absolute;
  left: 50%;
  top: -11px;
  transform: translateX(-50%);
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 8px 8px 0 8px;
  border-color: #fff transparent transparent transparent;
  opacity: 0;
  transition: 0.2s ease;
  z-index: 19;
}

.features li:hover::after,
.features li:hover::before {
  opacity: 1;
}

.features ul li:hover {
  background-color: #1ca52e;
}

/* PROFESSORES */

.professores {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.professores .box_professor {
  display: flex;
  max-width: 900px;
  background-color: #fff;
  color: var(--tertiary-color);
  padding: 1rem;
  margin: 0 3rem 5rem 3rem;
  border: 1px solid var(--primary-color);
  border-radius: 20px;
  transition: .3s ease;
}

.professores .box_professor:hover {
  transform: translateY(-7px);
  box-shadow: 0 6px 16px rgba(93, 0, 255, 0.15);
}

.professores .box_professor .text_professor {
  padding: 1.5rem;
}

.professores .box_professor .text_professor h3 {
  font-size: 1.5rem;
  padding-bottom: .5rem;
  background: linear-gradient(160deg, var(--primary-color) 35%, var(--secondary-color));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
  width: fit-content;
}

.professores .box_professor .text_professor h4 {
  width: fit-content;
  font-size: .8rem;
  font-weight: 600;
  padding: 4px 12px;
  border-radius: 50px;
  background-color: var(--quaternary-color);
  color: var(--text-color);
}

.professores .box_professor .text_professor p {
  text-align: justify;
  font-size: .85rem;
  padding-top: 1rem;
  max-width: 90%;
}

.professores .box_professor .text_professor p span {
  font-weight: bold;
}

.professores .box_professor img {
  align-self: center;
  width: 28%;
  height: 28%;
}

.professores .social-icons {
  margin-top: 1rem;
  display: flex;
  align-items: center;
}

.professores .social-icons .btn-sociais .bi {
  font-size: 1.7rem;
  color: var(--tertiary-color);
  transition: 0.5s;
  margin-right: 9px;
}

.professores .social-icons .btn-sociais i:hover {
  color: var(--primary-color);
}

/* BOLSISTAS */

.bolsistas {
  text-align: center;
  border-top-left-radius: 60px;
  border-top-right-radius: 60px;
  background: linear-gradient(180deg, #00bfff72 0%, #00bfff30 60%);
}

.bolsistas .box {
  display: flex;
  justify-content: center;
  gap: 3rem;
}

.bolsistas .box .box-equipe {
  display: flex;
  flex-direction: column;
  max-width: 500px;
  gap: 3rem;
}

.bolsistas .box .box-equipe h2 {
  font-size: 1.7rem;
  color: var(--primary-color);
}

.bolsistas .box .box-equipe h2 .bi {
  color: #ffd858;
}

.carrossel-equipe {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  position: relative;
  overflow: hidden;
}

.seta {
  z-index: 10;
  background-color: transparent;
  border: none;
  font-size: 2.5rem;
  color: #ffffffac;
  cursor: pointer;
  transition: color 0.3s ease;
  position: absolute;
}

.seta.esquerda {
  top: 50%;
  left: 40px;
}

.seta.direita {
  top: 50%;
  right: 30px;
}

.seta:hover {
  color: #fff;
}

.equipe-fotos {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 15rem;
  gap: 1rem;
}

.foto-container {
  position: relative;
  transition: transform 0.4s ease, opacity 0.4s ease;
}

.foto-container:not(.destaque) {
  opacity: 0.8;
  transform: scale(0.9);
}

.foto-container .nome-integrante {
  position: absolute;
  bottom: 0;
  left: 0;
  background: linear-gradient(160deg, var(--primary-color) 40%, var(--secondary-color));
  font-size: .6rem;
  padding: 3px 7px;
  border-radius: 20px;
  white-space: nowrap;
}

.foto-container.destaque .foto {
  width: 180px;
  height: 180px;
  box-shadow: 0 0 20px #6929e97a;
  transform: scale(1.1);
}

.foto-container.destaque .nome-integrante {
  font-size: .9rem;
}

.foto {
  width: 140px;
  height: 140px;
  position: relative;
  border-radius: 50%;
  overflow: hidden;
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.foto img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.box .box-descricao-equipe {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  max-width: 22rem;
}

.box-descricao-equipe .titulo-descricao-equipe h2 {
  background: linear-gradient(155deg, var(--primary-color) 45%, var(--secondary-color));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}

.box-descricao-equipe .conteudo-descricao-equipe {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 2rem;
  min-width: 280px;
}

.conteudo-descricao-equipe .descricao-equipe h3 {
  background: linear-gradient(155deg, var(--primary-color) 35%, var(--secondary-color));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
  font-size: 1.8rem;
  margin-bottom: 1rem;
}

.conteudo-descricao-equipe .descricao-equipe h4 {
  background: linear-gradient(155deg, var(--primary-color) 60%, var(--secondary-color));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
  font-size: 1rem;
  white-space: nowrap;
}
/* ... */

